// Copyright 2023 The Jujutsu Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package git_ref_view;

message GitRef {
  string name = 1;
  bytes commit_id = 2;
}

// This is the view of the last seen state of refs in the backing Git
// repository. Unlike the refs in jj's "View", these are not affected by `jj
// undo`. They also do not support conflicted states. Note that this implies
// that this data does not support concurrent changes and should be modified
// under lock.
message GitRefView {
    // TODO: We may eventually also track the HEAD (or HEADs if we support
    // multiple worktrees) here as well. For now, we do not allow it to be
    // conflicted.
    repeated GitRef refs = 1;
}
